Разместила данные на Google Drive, сделала открытые ссылки на все файлы, чтобы можно было через бд к ним обращаться и выводить необходимые данные. Саму базу данных также разместила там. Подключила бд по url, обращаясь к определенным страницам, попутно расправляясь с проблемами, которые возникали. То путь неверно указан, то не так назвала для поиска таблицу. Сейчас выводи карточки книг, но не дает возможности прослушивать контент и открывать страницу карточки книги для воспросизведения одной из глав и управления с помощью плеера. Пока что только создала страницу и макет для отображения карточки, но его еще не подключила к карточке на ее нажатие. Работа все еще в процессе.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="UserName">Марина Трухарова</string>
     <string name="Redact">Изменить</string>
     <string name="City">Нижний Тагил</string>
+    <string name="Back">Назад</string>
 </resources>
